@@ -5,6 +5,7 @@
 === 1.0.21 ===
 * Got rid of the <windows.h> plague header in header files.
 * Better workaround for vasprintf function.
+* Support for compilation with Clang under AArch64.
 * Updated build scripts.
 
 === 1.0.20 ===
